Handle missing transaction input keys when signing
SignVerifyService.getPubKey resolved the first input of a transaction and
decoded its pub key without checking either step. A transaction with no
inputs threw IndexOutOfBoundsException, and an input type from which the
parser cannot extract a pub key left the field null, which made
Utilities.decodeFromHex throw a NullPointerException.

Both are reachable with attacker-published transactions, so return the
empty array instead, which callers already treat as "no key".